Fix readability of the small css class

--- a/frontend/css/main.less
+++ b/frontend/css/main.less
@@ -343,7 +343,7 @@ h1.page-title, h2.page-title {
 
   small {
     font-style: italic;
-    .text-muted;
+    font-size: 85%;
   }
 
   .form-group:last-child { margin-bottom: 0px; }
